Fetch all roomnames and populate dropdown

--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,8 @@
           <input type="text" class="set-message" placeholder="Insert message"/>
           <button class="submit-message">Submit</button>
         </div>
+        <select class="roomnames">
+        </select>
 
       <!-- Your HTML goes here! -->
         <div class="messages">
