Added room filtering

--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
           <input type="text" class="set-message" placeholder="Insert message"/>
           <button class="submit-message">Submit</button>
         </div>
-        <select class="roomnames">
+        <select class="roomnames" label="Select Roomname">
         </select>
 
       <!-- Your HTML goes here! -->
